@@ -126,7 +126,12 @@ module ActiveMerchant #:nodoc:
       
       def void(identification, options = {})
         commit(build_void_request(identification, options), options)
-      end                       
+      end
+
+      def credit(money, identification, options = {})
+        commit(build_credit_request(money, identification, options), options)
+      end
+      
 
       # CyberSource requires that you provide line item information for tax calculations
       # If you do not have prices for each item or want to simplify the situation then pass in one fake line item that costs the subtotal of the order
@@ -213,6 +218,17 @@ module ActiveMerchant #:nodoc:
         
         xml = Builder::XmlMarkup.new :indent => 2
         add_void_service(xml, request_id, request_token)
+        xml.target!
+      end
+
+      def build_credit_request(money, identification, options)
+        order_id, request_id, request_token = identification.split(";")
+        options[:order_id] = order_id
+        
+        xml = Builder::XmlMarkup.new :indent => 2
+        add_purchase_data(xml, money, true, options)
+        add_credit_service(xml, request_id, request_token)
+        
         xml.target!
       end
 
@@ -303,6 +319,14 @@ module ActiveMerchant #:nodoc:
           xml.tag! 'voidRequestToken', request_token
         end
       end
+
+      def add_credit_service(xml, request_id, request_token)
+        xml.tag! 'ccCreditService', {'run' => 'true'} do
+          xml.tag! 'captureRequestID', request_id
+          xml.tag! 'captureRequestToken', request_token
+        end
+      end
+
       
       # Where we actually build the full SOAP request using builder
       def build_request(body, options)
@@ -318,7 +342,7 @@ module ActiveMerchant #:nodoc:
               end
             end
             xml.tag! 's:Body', {'xmlns:xsi' => 'http://www.w3.org/2001/XMLSchema-instance', 'xmlns:xsd' => 'http://www.w3.org/2001/XMLSchema'} do
-              xml.tag! 'requestMessage', {'xmlns' => 'urn:schemas-cybersource-com:transaction-data-1.26'} do
+              xml.tag! 'requestMessage', {'xmlns' => 'urn:schemas-cybersource-com:transaction-data-1.32'} do
                 add_merchant_data(xml, options)
                 xml << body
               end
